--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,22 @@
 }
 
 .userlist {
-
+  background-color: #683939;
+  width: 100%;
+  height: 5%;
+  margin: auto;
 }
 
 .chat {
-
+  background-color: #c7c4c4;
+  width: 100%;
+  height: 90%;
+  margin: auto;
 }
 
 .inputbox {
-  
+  background-color: #6d6161;
+  width: 100%;
+  height: 5%;
+  margin: auto;
 }
